--- a/IONIC/qrscanner/package.json
+++ b/IONIC/qrscanner/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@awesome-cordova-plugins/barcode-scanner": "^5.39.0",
+    "@awesome-cordova-plugins/in-app-browser": "^5.39.1",
+    "@capacitor/android": "3.4.1",
     "@capacitor/app": "1.1.0",
     "@capacitor/core": "3.4.1",
     "@capacitor/haptics": "1.1.4",
@@ -27,6 +29,9 @@
     "@capacitor/status-bar": "1.0.8",
     "@ionic-native/barcode-scanner": "^5.36.0",
     "@ionic/angular": "^6.0.0",
+    "@ionic/storage": "^3.0.6",
+    "@ionic/storage-angular": "^3.0.6",
+    "cordova-plugin-inappbrowser": "^5.0.0",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
