--- a/IONIC/qrscanner/package.json
+++ b/IONIC/qrscanner/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@awesome-cordova-plugins/barcode-scanner": "^5.39.0",
+    "@awesome-cordova-plugins/email-composer": "^5.39.1",
+    "@awesome-cordova-plugins/file": "^5.39.1",
     "@awesome-cordova-plugins/in-app-browser": "^5.39.1",
     "@capacitor/android": "3.4.1",
     "@capacitor/app": "1.1.0",
@@ -31,6 +33,8 @@
     "@ionic/angular": "^6.0.0",
     "@ionic/storage": "^3.0.6",
     "@ionic/storage-angular": "^3.0.6",
+    "cordova-plugin-email-composer": "^0.10.0",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.6.0",
